--- a/cv/main.tex
+++ b/cv/main.tex
@@ -81,7 +81,7 @@ B.E. in Electronic Information Engineering, GPA: 3.66/4.00
 \textbf{Programming:}
 
 \begin{itemize}
-    \item {\textit{Data Science:}} C++, CUDA, Python (PyTorch, Matplotlib), MATLAB, Tableau
+    \item {\textit{Data Science:}} C++, CUDA, Python (PyTorch, Hugging Face, Matplotlib), MATLAB, Tableau
     \item {\textit{Web Development:}} Python (Django, Dash), HTML, CSS, JavaScript (React), PostgreSQL
     \item {\textit{IT Skills:}} Git, AWS, Docker, Linux, Markdown, LaTeX
 \end{itemize}
@@ -104,7 +104,7 @@ B.E. in Electronic Information Engineering, GPA: 3.66/4.00
 \textit{Graduate Research Assistant}, with Professor Anshumali Shrivastava
 
 \begin{itemize}
-    \item Developed a 4-bit rotation-based outlier-free quantization framework for text-to-image diffusion transformers.
+    \item Developed a 4-bit tunable quantization framework for text-to-image diffusion transformers.
 \end{itemize}
 
 \vspace{\lineskip}
@@ -141,18 +141,16 @@ B.E. in Electronic Information Engineering, GPA: 3.66/4.00
 
 % publications
 \section*{Publications}
-    
-\textit{Preprints:}
 
-\begin{enumerate}	
+\textit{Journal Publications:}
+
+\begin{enumerate}
     \item \label{akane-ddpm} \textbf{Zeyu Yang}, Han Yu, Peikun Guo, Khadija Zanna, Xiaoxue Yang, Akane Sano,
-    ``Balanced Mixed-Type Tabular Data Synthesis with Diffusion Models'', arXiv:2404.08254, 2024.
-    \item \label{hao-admm} \textbf{Zeyu Yang}, Hao Wang, 
-    ``Network-Aware Asynchronous Distributed ADMM Algorithm for Peer-to-Peer Energy Trading'', arXiv:2312.06976, 2023.
+    ``Balanced Mixed-Type Tabular Data Synthesis with Diffusion Models'', \textit{Transactions on Machine Learning Research (TMLR)}, 2025.
 \end{enumerate}
 
 \vspace{\lineskip}
-
+    
 \textit{Conference Publications:}
 
 \begin{enumerate}[resume]
@@ -161,10 +159,19 @@ B.E. in Electronic Information Engineering, GPA: 3.66/4.00
     in \textit{Asia-Pacific International Symposium on Advanced Reliability and Maintenance Modeling}, 2020.
 \end{enumerate}
 
+\textit{Preprints:}
+
+\begin{enumerate}[resume]
+    \item \label{hao-admm} \textbf{Zeyu Yang}, Hao Wang, 
+    ``Network-Aware Asynchronous Distributed ADMM Algorithm for Peer-to-Peer Energy Trading'', \textit{arXiv:2312.06976}, 2023.
+\end{enumerate}
+
+\vspace{\lineskip}
+
 \textit{Working Papers:}
 
 \begin{enumerate}[resume]
-    \item \label{akane-clsp} \textbf{Zeyu Yang}, Han Yu, Akane Sano, ``Contrastive Pretraining for Stress Detection with Multimodal Wearable Sensor Data and Surveys'', in submission to BHI, 2024.
+    \item \label{akane-clsp} \textbf{Zeyu Yang}, Han Yu, Akane Sano, ``Contrastive Pretraining for Stress Detection with Multimodal Wearable Sensor Data and Surveys'', submitted to \textit{Conference on Health, Inference, and Learning (CHIL)}, 2025.
 \end{enumerate}
 
 \vspace{\lineskip}
@@ -185,26 +192,21 @@ Meritorious Winner of Interdisciplinary Contest in Modeling \hfill 2020
 % teaching experience
 \section*{Teaching Experience}
 
-\textbf{Data Visualization (COMP 665)}, Rice University \hfill February 2022 -- May 2023
+\textbf{Data Visualization (COMP 665)} at Rice University, \hfill Spring 2022 -- Spring 2023
 
-\textit{Graduate Teaching Assistant}, with Professor Joe Warren 
-
-\begin{itemize}
-    \item Answered questions about Python coding issues in weekly projects for a class of over 40 graduate students.
-    \item Developed a geographical data visualization project in Tableau with detailed supporting material for future classes.
-\end{itemize} 
+\textit{Teaching Assistant}, with Professor Joe Warren
 
 \vspace{\lineskip}
 
-\textbf{Statistics for Data Science (COMP 680)}, Rice University \hfill September 2022 -- May 2023
+\textbf{Statistics for Data Science (COMP 680)} at Rice University, \hfill Spring 2023
 
-\textit{Academic Tutor}, for Rice Athletics
+\textit{Academic Tutor}, with Professor Chen Su
 
-\begin{itemize}
-    \item Explained statistical techniques, such as hypothesis testing, Markov chain, and linear regression to students.
-    
-    \item Engaged one-on-one with students with problems in statistics and Python programming.
-\end{itemize} 
+\vspace{\lineskip}
+
+\textbf{Introduction to Data Science (DSCI 101)} at Rice University, \hfill Fall 2024
+
+\textit{Teaching Assistant}, with Professor Lorenzo Luzi
 
 % coursework
 \section*{Coursework}
