--- a/cv/main.tex
+++ b/cv/main.tex
@@ -46,11 +46,11 @@
 
 % contact information and other items
 \begin{center}
-    \begin{tabular}{lll}
-        % Email, Phone number, GitHub, LinkedIn
-        \faicon{envelope} zeyuyang8@gmail.com &
-        \hspace{0.25in} \faicon{phone}  (713) 855-5359 & 
-        \hspace{0.25in} \faicon{github} \url{zeyuyang8.github.io}
+    \begin{tabular}{llll}
+        \faicon{envelope} zeyu.yang@rice.edu &
+        \faicon{phone}  (713) 855-5359 & 
+        \faicon{globe} \url{zeyuyang8.github.io} &
+        \faicon{linkedin} \url{www.linkedin.com/in/zeyu-bob-yang}
     \end{tabular}
 \end{center}
 	
@@ -86,7 +86,7 @@ B.E. in Electronic Information Engineering, GPA: 3.66/4.00
 \textit{Graduate Research Assistant}, with Prof. Anshumali Shrivastava
 
 \begin{itemize}
-    \item Developed a novel parameter-efficient fine-tuning method for quantized foudation models based on sparse dictionary learning, achieving both memory efficiency during fine-tuning and computational efficiency during inference, with significantly fewer trainable parameters compared to baseline methods such as low-rank adaptation [\ref{anshu-lluf}].
+    \item Developed a novel parameter-efficient fine-tuning method for quantized foudation models based on sparse dictionary learning, achieving both memory efficiency during fine-tuning and computational efficiency during inference, with significantly fewer trainable parameters compared to baseline methods such as low-rank adaptation \ref{anshu-lluf}.
 \end{itemize}
 
 \vspace{\lineskip}
@@ -96,8 +96,8 @@ B.E. in Electronic Information Engineering, GPA: 3.66/4.00
 \textit{Graduate Student Researcher}, with Prof. Akane Sano
 
 \begin{itemize}
-    \item Developed a fair diffusion model to generate balanced mixed-type tabular data conditioned on multiple labels [\ref{akane-ddpm}].
-    \item Created a self-supervised multimodal learning method for stress detection using time series and tabular data [\ref{akane-clsp}].
+    \item Developed a fair diffusion model to generate balanced mixed-type tabular data conditioned on multiple labels \ref{akane-ddpm}.
+    \item Created a self-supervised multimodal learning method for stress detection using time series and tabular data \ref{akane-clsp}.
 \end{itemize}
 
 \vspace{\lineskip}
@@ -108,7 +108,7 @@ B.E. in Electronic Information Engineering, GPA: 3.66/4.00
 
 \begin{itemize}
     \item Designed lecture notes and Python programming assignments that cover the principles of neural networks.
-    \item Developed a Python toolbox for animating the training progress of multi-layer perceptrons [\ref{joe-plotnet}].
+    \item Developed a Python toolbox for animating the training progress of multi-layer perceptrons \ref{joe-plotnet}.
 \end{itemize}
 
 \vspace{\lineskip}
@@ -118,11 +118,11 @@ B.E. in Electronic Information Engineering, GPA: 3.66/4.00
 \textit{Undergraduate Student Researcher}, with Prof. Hao Wang
 
 \begin{itemize}
-    \item Developed an asynchronous distributed alternating direction method of multipliers (ADMM) algorithm to optimize energy trading problems under asynchronous communication, allowing communication delay and indicating a potential for better outcomes in real-world applications [\ref{hao-admm}].
+    \item Developed an asynchronous distributed alternating direction method of multipliers (ADMM) algorithm to optimize energy trading problems under asynchronous communication, allowing communication delay and indicating a potential for better outcomes in real-world applications \ref{hao-admm}.
 \end{itemize}
 
 % publications
-\section*{Publications}
+\section*{Selected Publications \hfill \href{https://scholar.google.com/citations?user=CaKsmnUAAAAJ&hl=en}{[Full List]}}
 
 \textit{In Submission:}
 
